# options-alpha

./: # Backend.md  .env.example  .env.example.gitignore  .gitignore  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  README.md
.claude/: settings.json  settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_columns.py  003_create_model_artifacts_table.py  004_widen_numeric_columns.py
backend/app/: config.py  database.py  main.py
backend/app/ml/: evaluate.py  features.py  labels.py  train.py
backend/app/models/: __init__.py  daily_bars.py  journal.py  market_regime.py  model_artifact.py  options.py  signals.py  stocks.py  technicals.py
backend/app/routers/: backtest.py  journal.py  options_chain.py  pipeline.py  score.py  signals.py
backend/app/schemas/: __init__.py  backtest.py  signals.py
backend/app/services/: backtester.py  data_ingestion.py  model_scorer.py  pattern_detect.py  technical_calc.py
backend/scripts/: daily_update.py  deploy.sh  retrain_model.py  seed_historical.py
backend/tests/: conftest.py  test_api.py  test_labels.py  test_pattern_detect.py  test_technical_calc.py
docs/: EXECUTION-PLAN.md  QUICKSTART.md
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: backtest-results.tsx  market-bar.tsx  market-regime.tsx  model-explainer.tsx  score-card.tsx  sidebar.tsx  signal-table.tsx  technical-chart.tsx  trade-journal.tsx
frontend/lib/: api.ts  (+2 more)
(+6 files in other folders)
